tests/specs/ecosystem/cliffy/keypress/1_0_0_rc_4.test
cliffy/keypress/1.0.0-rc.4
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@cliffy/keycode@1.0.0-rc.4": "jsr:@cliffy/keycode@1.0.0-rc.4"
    },
    "jsr": {
      "@cliffy/keycode@1.0.0-rc.4": {
        "integrity": "872ee86f6a438dc2c532408e542ee97ed19c91aedb8374c2eddc6e02e83c8ce4"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/mod.ts:46:7

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
  addEventListener(param0?: any, param1?: any, param2?: any): any {
  ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:47:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/mod.ts:56:7

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
  removeEventListener(param0?: any, param1?: any, param2?: any): any {
  ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:57:3

Found 4 errors.

